# slack_emoji_usage_analyzer

./: .env.example  .gitignore  README.md  pyproject.toml
src/emoji_usage/: __init__.py  aggregator.py  cli.py  config.py  csv_writer.py  emoji_loader.py  logging_cfg.py  query_builder.py  slack_client.py
tests/unit/: __init__.py  test_aggregator.py  test_config.py  test_csv_writer.py  test_query_builder.py  test_slack_client.py
